[MODFISTO-516]. Replace flaky api tests with unit tests